<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/userName" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameHint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/commentField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messageHint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submitButton"
        android:backgroundTint="@color/blue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/submitButton" />

    <TextView
        android:id="@+id/filterHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/searchRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/textSearchRadio"
            app:buttonTint="@color/blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textSearch" />

        <RadioButton
            android:id="@+id/dateSearchRadio"
            app:buttonTint="@color/blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateSearch" />

    </RadioGroup>

    <EditText
        android:id="@+id/textSearchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textSearchHint"
        android:visibility="visible" />

    <DatePicker
        android:id="@+id/calendarSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:datePickerMode="spinner"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/searchButton"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/searchButton" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refreshButton" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/allPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </ScrollView>


</LinearLayout>